--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,3 +13,21 @@ h1 {
 	color: aquamarine;
 	font-size: 16px;
 }
+
+h2 {
+	font-family: Verdana;
+	font-weight: 300;
+	font-size: 42px;
+	color: white;
+}
+
+p {
+	font-family: Verdana;
+	font-size: 21px;
+	color: gray;
+}
+
+.footer {
+	text-align: right;
+	color: gray;
+}
