Add fallback fonts

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 body {
 	background-color: black;
 	text-align: center;
-	font-family: Verdana;
+	font-family: Verdana, Helvetica, Sans-serif;
 }
 h1 {
 	font-weight: normal;
